[tool.poetry]
name = "bear-tools"
version = "0.1.2"
description = "An assortment of QA/Automation related tools"
authors = ["Sean Foley <sean.foley.engr@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "bear_tools", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
